INTYGFV-16453: Moved fk7211 logic to separate class